--- a/UMF_lab1/UMF_lab1/UMF_lab1.vcxproj.filters
+++ b/UMF_lab1/UMF_lab1/UMF_lab1.vcxproj.filters
@@ -35,5 +35,8 @@
     <Text Include="result.txt">
       <Filter>Файлы ресурсов</Filter>
     </Text>
+    <Text Include="f_true.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
 </Project>
